Prepare for enabling github actions.  Plan is to use the docs/EXAMPLE directory to run the tests, passing in variables and secrets, either via command-line or Environment, as needed.  Anchors/aliases need to be removed as they cannot be passed to Ansible on the command line or Environment: + `dns_nameserver_zone`: The only reason there is an alias here it to append it to `dns_user_domain`.  We change the logic here to replace `dns_user_domain` with `dns_subdomain`, which no longer includes the `dns_nameserver_zone` apex domain.  Also means inverting the logic in the DNS handling logic, but is actually more intuitive (previously, we had to remove `dns_nameserver_zone` from `dns_user_domain`, now we add it to `dns_subdomain` where needed, instead). + gcp_service_account_rawfile: This is now by default gathered from the environment `GCP_SERVICE_ACCOUNT_CONTENTS`, so all the logic is preserved. Rename `gcp_service_account_rawtext` to `gcp_service_account_contents` for consistency.
Other changes:
+ All the example vaulted passwords (which were non-functional placeholders) have to be removed (they get parsed before the command-line override, so playbook fails).
+ Allow Azure credentials to be passed via Environment vars (make the auth parameters optional)
+ Default the IP addresses to be public rather than private.
+ Rename `cluster_vars.type` to `cluster_vars.cloud_type` (entirely internal change)

--- a/roles/_dependencies/defaults/main.yml
+++ b/roles/_dependencies/defaults/main.yml
@@ -20,7 +20,7 @@ external_dns_resolver: "8.8.8.8"
 chrony_install: true
 
 # NTP servers for chrony
-chrony_ntp_servers: "{{ ['169.254.169.123 prefer iburst minpoll 4 maxpoll 4'] if cluster_vars.type == 'aws' else ['metadata.google.internal'] if cluster_vars.type == 'gcp' else ['pool.ntp.org'] }}"
+chrony_ntp_servers: "{{ ['169.254.169.123 prefer iburst minpoll 4 maxpoll 4'] if cluster_vars.cloud_type == 'aws' else ['metadata.google.internal'] if cluster_vars.cloud_type == 'gcp' else ['pool.ntp.org'] }}"
 
 # When there is only one hosttype in the cluster, whether to omit the hosttype from the hostname, (e.g. bastion-dev-node-a0 -> bastion-dev-a0).  This is useful when the hosttype is not relevant.  DO NOT use when there is a chance you will need it in future
 omit_singleton_hosttype_from_hostname: false
@@ -30,8 +30,7 @@ remove_snapd: true
 
 # The mandatory set of cluster_vars
 cluster_vars__mandatory:
-  type: "{{cloud_type}}"
-  region: "{{region}}"
+  cloud_type: "{{cloud_type}}"  # aws, gcp, azure, libvirt, esxifree
+  region: "{{region}}"          # cloud-specific region: europe-west4, us-east-1, etc.
   custom_tagslabels:
     cv__cluster_name: "{{cluster_name}}"
-
