--- a/roles/cluster_hosts/tasks/get_cluster_hosts_target.yml
+++ b/roles/cluster_hosts/tasks/get_cluster_hosts_target.yml
@@ -53,7 +53,7 @@
   include_tasks: "{{ item__include_tasks }}"
   loop: "{{ query('first_found', params) }}"
   loop_control: { loop_var: item__include_tasks }   #This mechanism to include_tasks only when the file exists, also creates a loop iterator 'item' that it sends to the included tasks.  If they also have loops, we get "The loop variable 'item' is already in use" warning.
-  vars: { params: { files: ["get_cluster_hosts_target_{{cluster_vars.type}}.yml"], skip: true } }
+  vars: { params: { files: ["get_cluster_hosts_target_{{cluster_vars.cloud_type}}.yml"], skip: true } }
 
 
 - name: get_cluster_hosts_target | cluster_hosts_target
