--- a/roles/readiness/tasks/main.yml
+++ b/roles/readiness/tasks/main.yml
@@ -2,4 +2,4 @@
 
 - name: readiness | create/update DNS CNAME records
   include_tasks: config_dns_cname.yml
-  when: (cluster_vars.dns_server is truthy) and (cluster_vars.dns_user_domain is truthy)
+  when: (cluster_vars.dns_server is truthy) and (cluster_vars.dns_nameserver_zone is truthy)
