--- a/roles/clean/tasks/azure.yml
+++ b/roles/clean/tasks/azure.yml
@@ -4,10 +4,10 @@
   block:
     - name: clean/azure | Delete VMs (and all attached infra (NIC/IP/Storage)) asynchronously
       azure.azcollection.azure_rm_virtualmachine:
-        client_id: "{{cluster_vars[buildenv].azure_client_id}}"
-        secret: "{{cluster_vars[buildenv].azure_secret}}"
-        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id}}"
-        tenant: "{{cluster_vars[buildenv].azure_tenant}}"
+        client_id: "{{cluster_vars[buildenv].azure_client_id | default(omit) }}"
+        secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}"
+        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id | default(omit) }}"
+        tenant: "{{cluster_vars[buildenv].azure_tenant | default(omit) }}"
         resource_group: "{{cluster_vars[buildenv].azure_resource_group}}"
         name: "{{item.name}}"
         remove_on_absent: ["all"]
@@ -32,10 +32,10 @@
 #  block:
 #    - name: clean/azure | Get instance resource info
 #      azure.azcollection.azure_rm_resource_info:
-#        client_id: "{{cluster_vars[buildenv].azure_client_id}}"
-#        secret: "{{cluster_vars[buildenv].azure_secret}}"
-#        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id}}"
-#        tenant: "{{cluster_vars[buildenv].azure_tenant}}"
+#        client_id: "{{cluster_vars[buildenv].azure_client_id | default(omit) }}"
+#        secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}}}"
+#        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id | default(omit) }}"
+#        tenant: "{{cluster_vars[buildenv].azure_tenant | default(omit) }}"
 #        resource_group: "{{cluster_vars[buildenv].azure_resource_group}}"
 #        resource_name: "{{ item.name }}"
 #        resource_type: VirtualMachines
@@ -56,10 +56,10 @@
 #
 #    - name: clean/azure | Delete VMs asynchronously
 #      azure.azcollection.azure_rm_virtualmachine:
-#        client_id: "{{cluster_vars[buildenv].azure_client_id}}"
-#        secret: "{{cluster_vars[buildenv].azure_secret}}"
-#        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id}}"
-#        tenant: "{{cluster_vars[buildenv].azure_tenant}}"
+#        client_id: "{{cluster_vars[buildenv].azure_client_id | default(omit) }}"
+#        secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}}}"
+#        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id | default(omit) }}"
+#        tenant: "{{cluster_vars[buildenv].azure_tenant | default(omit) }}"
 #        resource_group: "{{cluster_vars[buildenv].azure_resource_group}}"
 #        name: "{{item.name}}"
 #        remove_on_absent: ["all_autocreated"]
@@ -79,10 +79,10 @@
 #
 #    - name: create/azure | Delete managed disks
 #      azure.azcollection.azure_rm_manageddisk:
-#        client_id: "{{cluster_vars[buildenv].azure_client_id}}"
-#        secret: "{{cluster_vars[buildenv].azure_secret}}"
-#        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id}}"
-#        tenant: "{{cluster_vars[buildenv].azure_tenant}}"
+#        client_id: "{{cluster_vars[buildenv].azure_client_id | default(omit) }}"
+#        secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}}}"
+#        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id | default(omit) }}"
+#        tenant: "{{cluster_vars[buildenv].azure_tenant | default(omit) }}"
 #        resource_group: "{{cluster_vars[buildenv].azure_resource_group}}"
 #        name: "{{ item }}"
 #        state: absent
@@ -104,10 +104,10 @@
 #  block:
 #    - name: clean/azure | Get network interface info (per instance)
 #      azure.azcollection.azure_rm_networkinterface_info:
-#        client_id: "{{cluster_vars[buildenv].azure_client_id}}"
-#        secret: "{{cluster_vars[buildenv].azure_secret}}"
-#        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id}}"
-#        tenant: "{{cluster_vars[buildenv].azure_tenant}}"
+#        client_id: "{{cluster_vars[buildenv].azure_client_id | default(omit) }}"
+#        secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}}}"
+#        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id | default(omit) }}"
+#        tenant: "{{cluster_vars[buildenv].azure_tenant | default(omit) }}"
 #        resource_group: "{{cluster_vars[buildenv].azure_resource_group}}"
 #        name: "{{ item | basename }}"
 #      loop: "{{ r__async_status__azure_rm_resource_info__vm.results | json_query(\"[].response[].properties.networkProfile.networkInterfaces[].id\") }}"
@@ -125,10 +125,10 @@
 #
 #    - name: clean/azure | Delete public ipaddresses
 #      azure.azcollection.azure_rm_publicipaddress:
-#        client_id: "{{cluster_vars[buildenv].azure_client_id}}"
-#        secret: "{{cluster_vars[buildenv].azure_secret}}"
-#        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id}}"
-#        tenant: "{{cluster_vars[buildenv].azure_tenant}}"
+#        client_id: "{{cluster_vars[buildenv].azure_client_id | default(omit) }}"
+#        secret: "{{cluster_vars[buildenv].azure_secret | default(omit) }}}}"
+#        subscription_id: "{{cluster_vars[buildenv].azure_subscription_id | default(omit) }}"
+#        tenant: "{{cluster_vars[buildenv].azure_tenant | default(omit) }}"
 #        resource_group: "{{cluster_vars[buildenv].azure_resource_group}}"
 #        name: "{{ item.public_ip_id | basename }}"
 #      with_items: "{{ r__async_status__azure_rm_networkinterface_info.results | json_query(\"[].networkinterfaces[].ip_configurations[].public_ip_address\") }}"
