--- a/roles/cluster_hosts/tasks/get_cluster_hosts_state_libvirt.yml
+++ b/roles/cluster_hosts/tasks/get_cluster_hosts_state_libvirt.yml
@@ -5,7 +5,7 @@
   no_log: true
   delegate_to: localhost
   run_once: true
-  when: "cluster_vars.type == 'libvirt'  and  cluster_vars.libvirt.private_key is defined"
+  when: "cluster_vars.cloud_type == 'libvirt'  and  cluster_vars.libvirt.private_key is defined"
 
 #- name: get_cluster_hosts_state/libvirt | get cluster_hosts_state using the many individual info modules.
 #  block:
