--- a/roles/create/tasks/main.yml
+++ b/roles/create/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
-- name: "Create {{cluster_vars.type}} cluster"
-  include_tasks: "create_{{cluster_vars.type}}.yml"
+- name: "Create {{cluster_vars.cloud_type}} cluster"
+  include_tasks: "create_{{cluster_vars.cloud_type}}.yml"
   vars:
     # auto_volumes are normally a list of volumes per host (list of list).  We cannot iterate this within a non-nested ansible loop (with_items), so we denormalise/ flatten it into a new one-dimensional list, of each volume, as well as all the parent host information.
     cluster_hosts_target_denormalised_by_volume: |
