--- a/roles/redeploy/_noredeploy_scale_in_only/tasks/redeploy_by_hosttype_by_host.yml
+++ b/roles/redeploy/_noredeploy_scale_in_only/tasks/redeploy_by_hosttype_by_host.yml
@@ -4,7 +4,7 @@
 - name: Change cv__lifecycle_state label from 'current' to 'retiring'
   include_role:
     name: clusterverse.clusterverse.redeploy.__common
-    tasks_from: "set_lifecycle_state_label_{{cluster_vars.type}}.yml"
+    tasks_from: "set_lifecycle_state_label_{{cluster_vars.cloud_type}}.yml"
   vars:
     hosts_to_relabel: "{{ [host_to_del] }}"
     new_state: "retiring"
@@ -19,7 +19,7 @@
 - name: by_hosttype_by_host | Power off old VM
   include_role:
     name: clusterverse.clusterverse.redeploy.__common
-    tasks_from: "powerchange_vms_{{cluster_vars.type}}.yml"
+    tasks_from: "powerchange_vms_{{cluster_vars.cloud_type}}.yml"
   vars:
     hosts_to_powerchange: "{{ [host_to_del] }}"
     powerchange_new_state: "stop"
