--- a/roles/redeploy/_scheme_addallnew_rmdisk_rollback/tasks/main.yml
+++ b/roles/redeploy/_scheme_addallnew_rmdisk_rollback/tasks/main.yml
@@ -32,11 +32,11 @@
     - include_role:
         name: clusterverse.clusterverse.clean
         tasks_from: dns.yml
-      when: (hosts_to_clean | length > 0)  and  (cluster_vars.dns_server is truthy) and (cluster_vars.dns_user_domain is truthy)
+      when: (hosts_to_clean | length > 0)  and  (cluster_vars.dns_server is truthy) and (cluster_vars.dns_nameserver_zone is truthy)
 
     - include_role:
         name: clusterverse.clusterverse.clean
-        tasks_from: "{{cluster_vars.type}}.yml"
+        tasks_from: "{{cluster_vars.cloud_type}}.yml"
       when: (hosts_to_clean | length > 0)
 
     - debug:
