--- a/roles/redeploy/_scheme_addallnew_rmdisk_rollback/tasks/redeploy.yml
+++ b/roles/redeploy/_scheme_addallnew_rmdisk_rollback/tasks/redeploy.yml
@@ -12,7 +12,7 @@
     - name: Change cv__lifecycle_state label from 'current' to 'retiring'
       include_role:
         name: clusterverse.clusterverse.redeploy.__common
-        tasks_from: "set_lifecycle_state_label_{{cluster_vars.type}}.yml"
+        tasks_from: "set_lifecycle_state_label_{{cluster_vars.cloud_type}}.yml"
       vars:
         hosts_to_relabel: "{{ cluster_hosts_state | json_query(\"[?tagslabels.cv__lifecycle_state=='current']\") }}"
         new_state: "retiring"
@@ -71,7 +71,7 @@
     - name: Power off old VMs
       include_role:
         name: clusterverse.clusterverse.redeploy.__common
-        tasks_from: "powerchange_vms_{{cluster_vars.type}}.yml"
+        tasks_from: "powerchange_vms_{{cluster_vars.cloud_type}}.yml"
       vars:
         hosts_to_powerchange: "{{ cluster_hosts_state | json_query(\"[?tagslabels.cv__lifecycle_state=='retiring']\") }}"
         powerchange_new_state: "stop"
