--- a/roles/redeploy/_scheme_addallnew_rmdisk_rollback/tasks/rescue.yml
+++ b/roles/redeploy/_scheme_addallnew_rmdisk_rollback/tasks/rescue.yml
@@ -11,7 +11,7 @@
     - name: rescue | Change cv__lifecycle_state label from 'current' to 'redeployfail'
       include_role:
         name: clusterverse.clusterverse.redeploy.__common
-        tasks_from: "set_lifecycle_state_label_{{cluster_vars.type}}.yml"
+        tasks_from: "set_lifecycle_state_label_{{cluster_vars.cloud_type}}.yml"
       vars:
         hosts_to_relabel: "{{ cluster_hosts_state | json_query(\"[?tagslabels.cv__lifecycle_state=='current']\") }}"
         new_state: "redeployfail"
@@ -20,7 +20,7 @@
     - name: rescue | Change cv__lifecycle_state label from 'retiring' to 'current' state
       include_role:
         name: clusterverse.clusterverse.redeploy.__common
-        tasks_from: "set_lifecycle_state_label_{{cluster_vars.type}}.yml"
+        tasks_from: "set_lifecycle_state_label_{{cluster_vars.cloud_type}}.yml"
       vars:
         hosts_to_relabel: "{{ cluster_hosts_state | json_query(\"[?tagslabels.cv__lifecycle_state=='retiring']\") }}"
         new_state: "current"
@@ -52,7 +52,7 @@
 - name: rescue | poweroff the failed VMs
   include_role:
     name: clusterverse.clusterverse.redeploy.__common
-    tasks_from: "powerchange_vms_{{cluster_vars.type}}.yml"
+    tasks_from: "powerchange_vms_{{cluster_vars.cloud_type}}.yml"
   when: hosts_to_powerchange | length > 0
   vars:
     hosts_to_powerchange: "{{ cluster_hosts_state | json_query(\"[?tagslabels.cv__lifecycle_state=='redeployfail']\") }}"
