--- a/roles/redeploy/_scheme_addnewvm_rmdisk_rollback/tasks/redeploy_by_hosttype_by_host.yml
+++ b/roles/redeploy/_scheme_addnewvm_rmdisk_rollback/tasks/redeploy_by_hosttype_by_host.yml
@@ -26,7 +26,7 @@
     - name: Power off old VMs
       include_role:
         name: clusterverse.clusterverse.redeploy.__common
-        tasks_from: "powerchange_vms_{{cluster_vars.type}}.yml"
+        tasks_from: "powerchange_vms_{{cluster_vars.cloud_type}}.yml"
       vars:
         hosts_to_powerchange: "{{ hosts_to_remove }}"
         powerchange_new_state: "stop"
