--- a/roles/redeploy/_scheme_rmvm_keepdisk_rollback/tasks/main.yml
+++ b/roles/redeploy/_scheme_rmvm_keepdisk_rollback/tasks/main.yml
@@ -10,7 +10,7 @@
         - name: Change cv__lifecycle_state label from 'current' to 'retiring'
           include_role:
             name: clusterverse.clusterverse.redeploy.__common
-            tasks_from: "set_lifecycle_state_label_{{cluster_vars.type}}.yml"
+            tasks_from: "set_lifecycle_state_label_{{cluster_vars.cloud_type}}.yml"
           vars:
             hosts_to_relabel: "{{ cluster_hosts_state | json_query(\"[?tagslabels.cv__lifecycle_state=='current']\") }}"
             new_state: "retiring"
@@ -29,7 +29,7 @@
       include_tasks: "{{ item__include_tasks }}"
       loop: "{{ query('first_found', params) }}"
       loop_control: { loop_var: item__include_tasks }   #This mechanism (to include_tasks only when the file exists), also creates a loop iterator 'item' that it sends to the included tasks.  If they also have loops, we otherwise get the warning: "The loop variable 'item' is already in use".
-      vars: { params: { files: ["_add_src_diskinfo_to_cluster_hosts_target__{{cluster_vars.type}}.yml"], skip: true } }
+      vars: { params: { files: ["_add_src_diskinfo_to_cluster_hosts_target__{{cluster_vars.cloud_type}}.yml"], skip: true } }
 
     - block:
         - name: debug cluster_hosts_target_by_hosttype
@@ -62,7 +62,7 @@
     - name: rescue | Change cv__lifecycle_state label from 'current' to 'redeployfail'
       include_role:
         name: clusterverse.clusterverse.redeploy.__common
-        tasks_from: "set_lifecycle_state_label_{{cluster_vars.type}}.yml"
+        tasks_from: "set_lifecycle_state_label_{{cluster_vars.cloud_type}}.yml"
       vars:
         hosts_to_relabel: "{{ cluster_hosts_state | json_query(\"[?tagslabels.cv__lifecycle_state=='current']\") }}"
         new_state: "redeployfail"
@@ -70,7 +70,7 @@
     - name: rescue | Change cv__lifecycle_state label from 'retiring' to 'current'
       include_role:
         name: clusterverse.clusterverse.redeploy.__common
-        tasks_from: "set_lifecycle_state_label_{{cluster_vars.type}}.yml"
+        tasks_from: "set_lifecycle_state_label_{{cluster_vars.cloud_type}}.yml"
       vars:
         hosts_to_relabel: "{{ cluster_hosts_state | json_query(\"[?tagslabels.cv__lifecycle_state=='retiring']\") }}"
         new_state: "current"
@@ -80,7 +80,7 @@
         name: clusterverse.clusterverse.cluster_hosts
 
     - name: rescue | Add the disk info from previous instances to cluster_hosts_target
-      include_tasks: "_add_src_diskinfo_to_cluster_hosts_target__{{cluster_vars.type}}.yml"
+      include_tasks: "_add_src_diskinfo_to_cluster_hosts_target__{{cluster_vars.cloud_type}}.yml"
 
     - name: rescue | explicitly specify only the relevant cluster.yml roles to run for rescuing
       set_fact:
@@ -108,11 +108,11 @@
     - include_role:
         name: clusterverse.clusterverse.clean
         tasks_from: dns.yml
-      when: (hosts_to_clean | length > 0)  and  (cluster_vars.dns_server is truthy) and (cluster_vars.dns_user_domain is truthy)
+      when: (hosts_to_clean | length > 0)  and  (cluster_vars.dns_server is truthy) and (cluster_vars.dns_nameserver_zone is truthy)
 
     - include_role:
         name: clusterverse.clusterverse.clean
-        tasks_from: "{{cluster_vars.type}}.yml"
+        tasks_from: "{{cluster_vars.cloud_type}}.yml"
       when: (hosts_to_clean | length > 0)
 
     - debug:
