--- a/roles/redeploy/_noredeploy_scale_in_only/tasks/redeploy_by_hosttype_by_host.yml
+++ b/roles/redeploy/_noredeploy_scale_in_only/tasks/redeploy_by_hosttype_by_host.yml
@@ -24,9 +24,9 @@
     hosts_to_powerchange: "{{ [host_to_del] }}"
     powerchange_new_state: "stop"
 
-- name: "Run {{mainclusteryml}} to fix cluster"
+- name: "Run {{mainclusteryml}} to fix cluster.  Note: If an argv tuple value starts with '{', or contains '={', surround it with single quotes to preserve as dict when re-parsed"
   dseeley.nested_playbook.nested_playbook:
-    playbook_cmdline: "{{ (ansible_facts.argv[1:] | join(' ')) | regex_replace('redeploy.yml', mainclusteryml) }} {{ redeploy_extra_vars | default({}) | clusterverse.clusterverse.extravars_from_dict }}"
+    playbook_cmdline: "{{ (ansible_facts.argv[1:] | map('regex_replace', '(^|=)(\\{.*\\})$', \"\\1'\\2'\" ) | join(' ')) | regex_replace('redeploy.yml', mainclusteryml) }} {{ redeploy_extra_vars | default({}) | clusterverse.clusterverse.extravars_from_dict }}"
 
 - name: re-acquire the dynamic inventory (includes cluster_hosts_state)
   include_role:
